# autokaggler

./: .gitignore  AGENTS.md  README.md  READMEJP.md  autokaggler_philosophy.md  pyproject.toml
.github/workflows/: autofix.yml  ci.yml
data/sample/: schema.json  test.csv  train.csv
src/autokaggler/: __init__.py  __main__.py  agent.py  data_manager.py  pipeline.py
tests/: conftest.py  test_pipeline.py
