[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autokaggler"
version = "0.1.0"
description = "Automated pipeline for Kaggle Titanic tutorial"
authors = [{name = "AutoKaggler"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.1",
    "kaggle>=1.5.13",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://www.kaggle.com/competitions/titanic"

[tool.setuptools.packages.find]
where = ["src"]
